new msg, included webgl

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     .direction {
       -webkit-appearance: none;
       height: 15px;
+      width: 50px;
       background: rgb(76, 6, 94);
       outline: none;
       opacity: 0.8;
@@ -58,8 +59,8 @@
     }
 
     .direction::-moz-range-thumb {
-      width: 15px;
-      height: 15px;
+      width: 20px;
+      height: 20px;
       border-radius: 50%;
       border: none;
       background: #8d16dd;
@@ -70,7 +71,7 @@
 
 <body>
   <div class="welcomeMsg">
-    Change stars speed or direction with these sliders! 👨‍🚀🌠🌌
+    Change stars speed or direction and travel through starfield! 👨‍🚀🌠
   </div>
 </body>
 
